# TP2-FINAL-PROJECT

./: .env  .gitignore  README.md  pyvenv.cfg
.devcontainer/: README.md  devcontainer.json
data/: README.md
docker/: Dockerfile.dev  README.md  docker-compose.yml
src/: README.md
src/back_end/: .gitignore  README.md  data.db  main.py  pyproject.toml
src/back_end/src/engine/: README.md  __init__.py  client.py  create_app.py  exceptions.py  lifespan.py  logger.py  security.py  settings.py  types.py
src/back_end/src/engine/database/: __init__.py  _crud.py  _session.py  _user.py  session.py
src/back_end/src/engine/routes/: __init__.py  _handle_login.py  _handle_payload.py
src/back_end/src/engine/schemas/: __init__.py
src/back_end/src/engine/schemas/ingoing/: __init__.py  _logging.py  _login.py  _validators.py
src/back_end/src/engine/schemas/outgoing/: __init__.py  _user_basic.py
src/back_end/src/engine/schemas/sql/: __init__.py  _base_model.py  _shopping_list.py  _user.py
src/back_end/src/engine/services/: __init__.py  _handle_login.py  _handle_webhook.py
src/back_end/tests/: README.md  __init__.py  conftest.py  test_client.py  test_create_app.py  test_logger.py  test_security.py  test_settings.py
src/back_end/tests/database/: test_crud.py  test_session.py  test_user.py
src/back_end/tests/routes/: test_handle_payload.py  test_login_route.py
src/back_end/tests/schemas/: test_logging_entry.py  test_login_request.py
src/back_end/tests/services/: test_handle_login.py  test_handle_webhook.py
src/front_end/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/front_end/src/cadastro/: cadastro.css  cadastro.html  cadastro.js
src/front_end/src/dashboard/: dashboard.css  dashboard.html  dashboard.js
src/front_end/src/home/: home.css  home.js
src/front_end/src/js/: main.js
src/front_end/src/login/: login.css  login.html  login.js
src/front_end/src/styles/: animations.css  buttons.css  navbar.css  reset.css  responsive.css  style.css  variables.css
src/front_end/src/utils/: api.js  auth.js  theme.js  validators.js
